<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/btnDivide"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/btnMinus"
        android:layout_centerVertical="true"
        android:onClick="opeAssign"
        android:ems="4"
        android:text="@string/divide" />

    <Button
        android:id="@+id/btnSeven"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/btnMultiply"
        android:layout_toLeftOf="@+id/btnFive"
        android:ems="4"
        android:onClick="assignVariable"
        android:text="@string/seven" />

    <Button
        android:id="@+id/btnEight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/btnSeven"
        android:layout_alignBottom="@+id/btnSeven"
        android:layout_alignLeft="@+id/btnFive"
        android:ems="4"
        android:onClick="assignVariable"
        android:text="@string/eight" />

    <Button
        android:id="@+id/btnPeriod"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/btnSix"
        android:layout_below="@+id/btnEight"
        android:ems="4"
        android:onClick="assignVariable"
        android:text="@string/period" />

    <Button
        android:id="@+id/btnNine"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/btnSix"
        android:layout_below="@+id/btnSix"
        android:ems="4"
        android:onClick="assignVariable"
        android:text="@string/nine" />

    <Button
        android:id="@+id/btnZero"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btnSeven"
        android:layout_toRightOf="@+id/btnSeven"
        android:ems="4"
        android:onClick="assignVariable"
        android:text="@string/zero" />

    <Button
        android:id="@+id/btnTwo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/btnThree"
        android:layout_alignBottom="@+id/btnThree"
        android:layout_toRightOf="@+id/btnOne"
        android:ems="4"
        android:onClick="assignVariable"
        android:text="@string/two" />

    <Button
        android:id="@+id/btnThree"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/btnPlus"
        android:layout_alignBottom="@+id/btnPlus"
        android:layout_toRightOf="@+id/btnTwo"
        android:ems="4"
        android:onClick="assignVariable"
        android:text="@string/three" />

    <Button
        android:id="@+id/btnOne"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/btnSix"
        android:layout_alignParentLeft="true"
        android:ems="4"
        android:onClick="assignVariable"
        android:text="@string/one" />

    <Button
        android:id="@+id/btnSix"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/btnDivide"
        android:layout_toRightOf="@+id/btnTwo"
        android:ems="4"
        android:onClick="assignVariable"
        android:text="@string/six" />

    <Button
        android:id="@+id/btnFive"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btnTwo"
        android:layout_toLeftOf="@+id/btnThree"
        android:ems="4"
        android:onClick="assignVariable"
        android:text="@string/five" />

    <Button
        android:id="@+id/btnFour"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/btnSeven"
        android:layout_toLeftOf="@+id/btnEight"
        android:ems="4"
        android:onClick="assignVariable"
        android:text="@string/four" />

    <Button
        android:id="@+id/btnMultiply"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btnDivide"
        android:layout_toRightOf="@+id/btnPeriod"
        android:ems="4"
        android:onClick="opeAssign"
        android:text="@string/mul" />

    <Button
        android:id="@+id/btnMinus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btnThree"
        android:layout_toRightOf="@+id/btnThree"
        android:ems="4"
        android:onClick="opeAssign"
        android:text="@string/minus" />

    <Button
        android:id="@+id/btnCe"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/btnCalc"
        android:layout_alignLeft="@+id/btnSeven"
        android:ems="4"
        android:onClick="resetCalc"
        android:text="@string/ce" />

    <Button
        android:id="@+id/btnPlus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/btnOne"
        android:layout_alignBottom="@+id/btnOne"
        android:layout_alignLeft="@+id/btnMinus"
        android:ems="4"
        android:onClick="opeAssign"
        android:text="@string/plus" />

    <Button
        android:id="@+id/btnCalc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/btnMultiply"
        android:layout_below="@+id/btnMultiply"
        android:ems="4"
        android:onClick="calculateResult"
        android:text="@string/calc" />

    <TextView
        android:id="@+id/tvDisplay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/btnTwo"
        android:layout_alignEnd="@+id/btnPlus"
        android:layout_alignLeft="@+id/btnOne"
        android:layout_alignRight="@+id/btnPlus"
        android:layout_alignStart="@+id/btnOne"
        android:layout_gravity="top"
        android:background="#FFCCBB"
        android:text="@string/zero"
        android:textAppearance="?android:attr/textAppearanceLarge" />

</RelativeLayout>

